# ratatai

./: .gitignore  Cargo.toml
launchpad_api_client/: Cargo.toml
launchpad_api_client/examples/: fetch_bugs.rs  show_structs.rs
launchpad_api_client/src/: client.rs  fake.rs  lib.rs
ratatai/: Cargo.toml
ratatai/src/: ai.rs  app.rs  events.rs  join_monitor.rs  lib.rs  main.rs  ui.rs
src/: ai.rs  app.rs  events.rs  lib.rs  main.rs  ui.rs
