[package]
name = "ratatai"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
dotenv = "0.15.0"
google-ai-rs = "0.1.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
textwrap = "0.16.0"
chrono = "0.4.41"
throbber-widgets-tui = "0.8.0"
tokio = { version = "1.47.1", features = ["full"] }
launchpad_api_client = { path = "../launchpad_api_client" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
tracing-appender = "0.2.3"
